# serenata

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
data/sample/: README.md
docs/: data-model.md
docs/adr/: 0001-parquet-duckdb-storage.md  README.md
docs/hypotheses/: README.md
serenata/: __init__.py  cli.py
serenata/classify/: __init__.py
serenata/fetch/: __init__.py
serenata/normalise/: __init__.py
serenata/parse/: __init__.py
serenata_europa/: cli.py
tests/: test_cli.py  test_package.py
tests/fixtures/: README.md
