[project]
name = "serenata"
version = "0.1.0"
description = "Anomaly detection pipeline for EU public procurement notices (TED/eForms)"
readme = "README.md"
authors = [{ name = "Felipe B. Cabral", email = "felipe.benites@gmail.com" }]
license = "AGPL-3.0-only"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = []

[project.urls]
Repository = "https://github.com/cabral/serenata"

[project.scripts]
serenata = "serenata.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.8",
]

[build-system]
requires = ["uv_build>=0.8.0,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
# Flat layout: the package lives at the repository root, not under src/.
module-root = ""

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # import sorting
    "UP",  # pyupgrade
    "B",   # bugbear
    "SIM", # simplify
    "RUF", # ruff-specific rules
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
